# frcc

./: .gitignore  Cargo.toml  Containerfile  Makefile  compose.yml  test.html
.github/workflows/: container.yml  rust.yml
crates/frcc_card_gen/: Cargo.toml  printout.typ
crates/frcc_card_gen/src/: lib.rs  printout.rs
entity/: Cargo.toml
entity/src/: auth_token.rs  card.rs  card_ability.rs  card_design.rs  invite.rs  lib.rs  mod.rs  prelude.rs  scan.rs  team.rs  user.rs  user_team.rs
migration/src/: lib.rs  m20250411_030008_init.rs
public/: robots.txt
src/: main.rs  state.rs  templates.rs  util.rs
src/db/: mod.rs
src/routes/: api.rs  frontend.rs  mod.rs  structs.rs  util.rs
templates/: about.tera  account.tera  admin.tera  base.tera  cards.tera  dashboard.tera  edit_cards.tera  hero.tera  notification.tera  privacy.tera  scan.tera  signin.tera  signup.tera  style.tera
