[package]
name = "frc_pokemon"
version = "0.1.0"
edition = "2024"

[features]
default = []
include_templates = ["dep:include_dir"]

[dependencies]
axum = "0.8.3"
env_logger = "0.11.8"
include_dir = { version = "0.7.4", optional = true }
log = "0.4.27"
once_cell = "1.21.3"
sled = "0.34.7"
tera = "1.20.0"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.6.2", features = ["compression-full", "decompression-full", "fs"] }

[profile.release]
lto = true
opt-level = 3
panic = "abort"
codegen-units = 1
