[package]
name = "frcc"
version = "0.1.0"
edition = "2024"

[features]
default = []
include_templates = ["dep:include_dir"]

[dependencies]
argon2 = "0.5.3"
axum = "0.8.3"
axum-extra = { version = "0.10.1", default-features = false, features = ["cookie", "multipart"] }
env_logger = "0.11.8"
fastrand = "2.3.0"
frcc_card_gen = { version = "0.1.0", path = "crates/frcc_card_gen" }
include_dir = { version = "0.7.4", optional = true }
log = "0.4.27"
nanoid = "0.4.0"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
tera = "1.20.0"
tmf = { version = "0.2.1", features = ["tokio_runtime"] }
toasty = { git = "https://github.com/frc4533-lincoln/toasty", branch = "main", version = "0.1.0", features = ["sqlite"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.6.2", features = ["compression-full", "fs"] }

[workspace]
members = ["crates/frcc_card_gen"]
