[package]
name = "frcc"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
argon2 = "0.5.3"
axum = "0.8.3"
axum-extra = { version = "0.10.1", default-features = false, features = ["cookie", "multipart"] }
env_logger = "0.11.8"
frcc_card_gen = { version = "0.1.0", path = "crates/frcc_card_gen" }
log = "0.4.27"
nanoid = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
sea-orm = { version = "1.1.0", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
tera = "1.20.0"
tmf = { version = "0.2.1", features = ["tokio_runtime"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.6.2", features = ["compression-zstd"] }
entity = { version = "0.1.0", path = "./entity" }
rust-embed = { version = "8.7.0", features = ["axum-ex", "mime-guess"] }
once_cell = { version = "1.21.3", default-features = false, features = ["parking_lot"] }
migration = { version = "0.1.0", path = "migration" }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
chrono = "0.4.40"

[workspace]
members = ["crates/frcc_card_gen", "entity", "migration"]
