[package]
name = "frcc_card_gen"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
resvg = { version = "0.45.0", default-features = false, features = ["image-webp", "text", "raster-images", "system-fonts"] }
rxing = { version = "0.7.1", default-features = false, features = ["client_support", "svg_write"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
svg = "0.18.0"
tempfile = "3.19.1"
